--- a/stampgui/pom.xml
+++ b/stampgui/pom.xml
@@ -14,7 +14,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>de.sand.main.main</mainClass>
+              <mainClass>de.sand.main.myMain</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -23,7 +23,7 @@
   </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 </project>
