Worte  neu aufgenommen
 - 'D:\Works\Workspaces\Stamps\.vscode\settings.json':
  - neue Worte

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,22 @@
   "maven.view": "hierarchical",
   "java.configuration.updateBuildConfiguration": "interactive",
   "cSpell.words": [
+    "algorithmus",
+    "algoritmus",
+    "Ausweitungsversuche",
     "Centr",
+    "dbsorte",
+    "dbtyp",
+    "jdbc",
+    "lepper",
+    "mssql",
+    "mysql",
+    "MYSQL",
+    "nouser",
+    "ODBC",
+    "ojdbc",
+    "sqlserver",
+    "tigt",
     "withs",
     "Withs"
   ]
