--- a/stampgui/pom.xml
+++ b/stampgui/pom.xml
@@ -27,4 +27,11 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>com.microsoft.sqlserver</groupId>
+      <artifactId>mssql-jdbc</artifactId>
+      <version>11.2.1.jre17</version>
+    </dependency>
+  </dependencies>
 </project>
