Aufräumen vor neuinstallation

--- a/stampgui/.vscode/settings.json
+++ b/stampgui/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
   "cSpell.words": [
-    "dbsorte"
+    "Centr",
+    "dbsorte",
+    "dbtyp",
+    "DBTYPE",
+    "lepper",
+    "MSSQL",
+    "mysql",
+    "MYSQL",
+    "nouser",
+    "sqlserver",
+    "treiber"
   ]
 }
